default/objects/Credit_Factory_Report_Employee__c/Credit_Factory_Report_Employee__c.object-meta.xml
<CustomObject>
    <label>Credit Factory Report Employee</label>
    <nameField>
        <label>Credit_Factory Report Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Credit Factory Report Employees</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>