default/objects/Credit_Factory_Report_Employee__c/fields/Company_Id__c.field-meta.xml
<CustomField>
    <fullName>Company_Id__c</fullName>
    <label>Company Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>