default/objects/Credit_Factory_Report_Employee__c/fields/Company_Role__c.field-meta.xml
<CustomField>
    <fullName>Company_Role__c</fullName>
    <label>Company Role</label>
    <length>20</length>
    <type>Text</type>
</CustomField>