default/objects/Credit_Factory_Report_Employee__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <label>Company Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>