default/objects/Credit_Factory_Report_Employee__c/fields/Credit_Factory_Report__c.field-meta.xml
<CustomField>
    <fullName>Credit_Factory_Report__c</fullName>
    <label>Credit Factory Report</label>
    <referenceTo>Credit_Factory_Report__c</referenceTo>
    <relationshipLabel>Credit Factory Report Employees</relationshipLabel>
    <relationshipName>Credit_Factory_Report_Employees</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>