default/objects/Credit_Factory_Report_Employee__c/fields/Reported__c.field-meta.xml
<CustomField>
    <fullName>Reported__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reported</label>
    <type>Checkbox</type>
</CustomField>